[package]
name = "snowflake-ng"
version = "0.1.0"
edition = "2021"
authors = ["Krysztal Huang <krysztal.huang@outlook.com>"]

[dependencies]
rand = "0.8"

serde = { version = "1.0", features = ["derive"], optional = true }
time = { version = "0.3", optional = true }
chrono = { version = "0.4", optional = true }
futures-timer = "3"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[features]
default = ["serde", "chrono", "time"]
serde = ["dep:serde"]
chrono = ["dep:chrono"]
time = ["dep:time"]
