[package]
name = "snowflake-ng"
version = "0.1.4"
edition = "2021"
authors = ["Krysztal Huang <krysztal.huang@outlook.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Dead easy and high performance `snowflake` implemented in Rust. "

keywords = [
    "snowflake",
    "distributed-id",
    "uniqueness",
    "auto-increment",
    "generation",
]
categories = ["data-structures", "algorithms"]

repository = "https://github.com/Krysztal112233/snowflake-ng"
documentation = "https://docs.rs/snowflake-ng/latest/snowflake_ng/"

[dependencies]
chrono = { version = "0.4", optional = true }
futures = "0.3"
futures-timer = "3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
time = { version = "0.3", optional = true }

[dev-dependencies]
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }

[features]
default = ["serde", "chrono", "time", "sync"]
serde = ["dep:serde"]
chrono = ["dep:chrono"]
time = ["dep:time"]
sync = []
